--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lilyrose2798/trpc-openapi",
+  "name": "@usevenice/trpc-openapi",
   "version": "1.3.6",
   "description": "tRPC OpenAPI",
   "author": "LilyRose2798 <lily@rose.place>",
